[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/palladium/core/environment/door_sound.gd" type="Script" id=1]
[ext_resource path="res://addons/palladium/assets/sound/environment/243699__ertfelda__hidden-wall-opening.ogg" type="AudioStream" id=2]
[ext_resource path="res://addons/palladium/assets/sound/environment/231751__k06a__massive_door_long.ogg" type="AudioStream" id=3]

[node name="door_sound" type="Spatial"]
script = ExtResource( 1 )
door_sound_stream = ExtResource( 2 )
stop_sound_stream = ExtResource( 3 )

[node name="door_sound" type="AudioStreamPlayer" parent="."]
bus = "Sound"

[node name="stop_sound" type="AudioStreamPlayer" parent="."]
bus = "Sound"
[connection signal="finished" from="door_sound" to="." method="_on_door_sound_finished"]
